--- a/package.json
+++ b/package.json
@@ -12,5 +12,16 @@
     "express": "^4.14.0",
     "md5": "^2.2.1",
     "ws": "^1.1.1"
+  },
+  "devDependencies": {
+    "babel-core": "^6.10.4",
+    "babel-loader": "^6.2.4",
+    "babel-preset-es2015": "^6.9.0",
+    "babel-preset-react": "^6.11.1",
+    "react-hot-loader": "^1.3.0",
+    "webpack": "^1.13.1",
+    "webpack-dev-server": "^1.14.1",
+    "clean-css":"~3.4.9",
+    "fnv-plus": "~1.2.12"
   }
 }
